Added libfolder and continued work on a1

--- a/a1/makefile
+++ b/a1/makefile
@@ -7,4 +7,7 @@ different_files:
 inline:
 	gcc -O2 inline.c -o inline.out
 
+disk_operations:
+	gcc -O2 disk_writing.c ../lib/benchmark_utils.c -o disk_operations.out 
+
 all: same_file different_files inline
