Continued work on a1

--- a/a1/makefile
+++ b/a1/makefile
@@ -8,6 +8,6 @@ inline:
 	gcc -O2 inline.c -o inline.out
 
 disk_operations:
-	gcc -O2 disk_writing.c ../lib/benchmark_utils.c -o disk_operations.out 
+	gcc -O2 disk_operations.c ../lib/benchmark_utils.c -o disk_operations.out 
 
 all: same_file different_files inline
