--- a/a2/makefile
+++ b/a2/makefile
@@ -1,3 +1,5 @@
-tests:
-	gcc tests.c read_from_text_file.c ../lib/matrix_utils.c -lm -o tests.out
+cell_distances:
+	gcc assignment_2.c -fopenmp -lm -O2 -o cell_distances
 
+clean:
+	rm cell_distances
