--- a/assignment_3/makefile
+++ b/assignment_3/makefile
@@ -15,7 +15,7 @@ all : newton $(TESTS)
 newton: src/assignment_3.c
 	gcc -march=native -lm -g -O2 -o $@ $<
 $(TESTS): %:%.c
-	gcc -O3 -g -o $@ $<
+	gcc -O2 -g -lm -o $@ $<
 
 .PHONY: clean
 clean: 
